[gd_scene load_steps=4 format=2]

[ext_resource path="res://Square_16_16.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 87.75, 87 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 16.25, 9 )

[node name="Muzzle2" type="Position2D" parent="."]
position = Vector2( 16.25, -10 )

[node name="GunTimer1" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GunTimer2" type="Timer" parent="."]
one_shot = true
